build: change vscode search config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
 
     "search.exclude": {
         "modules/": true,
-        "dump/": true
+        "dumps/": true,
+        "src/InstagramHeaders.h": true
     }
 }
