--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -128,7 +128,7 @@ jobs:
               uses: softprops/action-gh-release@v2.0.6
               with:
                 name: SCInsta_sideloaded_v${{ steps.scinsta_version.outputs.version }}
-                files: ${{ github.workspace }}/main/packages/*.ipa
+                files: ${{ github.workspace }}/main/packages/SCInsta_sideloaded_v*.ipa
                 draft: true
 
             - name: Output Release URL
