adjust ipapatch url to always download latest

--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -97,12 +97,11 @@ jobs:
                 pip install --force-reinstall https://github.com/asdfzxcvbn/pyzule-rw/archive/main.zip
                 
                 cd main
-                curl -Lo ipapatch https://github.com/asdfzxcvbn/ipapatch/releases/download/v2.1.2/ipapatch.macos-arm64
+                curl -Lo ipapatch https://github.com/asdfzxcvbn/ipapatch/releases/latest/download/ipapatch.macos-arm64
                 chmod +x ipapatch
                 ls -la
 
                 ./build.sh sideload
-                ./ipapatch --input "packages/SCInsta-sideloaded.ipa" --inplace --noconfirm
                 ls -la packages
                 
               env:
