--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -97,7 +97,7 @@ jobs:
                 pip install --force-reinstall https://github.com/asdfzxcvbn/pyzule-rw/archive/main.zip
                 
                 cd main
-                curl -Lo ipapatch https://github.com/asdfzxcvbn/ipapatch/releases/latest/download/ipapatch.macos-arm64
+                curl -Lo ipapatch https://github.com/asdfzxcvbn/ipapatch/releases/download/v2.1.3/ipapatch.macos-arm64
                 chmod +x ipapatch
                 ls -la
 
