build: update vscode build task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -41,6 +41,10 @@
                 "reveal": "silent",
                 "panel": "dedicated",
                 "clear": true
+            },
+            "icon": {
+                "color": "terminal.ansiYellow",
+                "id": "debug-connected"
             }
         }
     ]
