build: fix build script to work with ipapatch in env path

--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -99,6 +99,7 @@ jobs:
                 cd main
                 curl -Lo ipapatch https://github.com/asdfzxcvbn/ipapatch/releases/download/v2.1.3/ipapatch.macos-arm64
                 chmod +x ipapatch
+                export PATH=.:$PATH
                 ls -la
 
                 ./build.sh sideload
